[backend] Added known host file manager back

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -15,7 +15,7 @@ build-architect:
 	docker tag civelocity/architect:${GIT_VERSION} civelocity/architect:latest
 
 build-builder:
-	docker build -t civelocity/architect:${GIT_VERSION} -f build/docker/builder.Dockerfile .
+	docker build -t civelocity/builder:${GIT_VERSION} -f build/docker/builder.Dockerfile .
 	docker tag civelocity/builder:${GIT_VERSION} civelocity/builder:latest
 
 build-cli:
