--- a/web/velocity/package.json
+++ b/web/velocity/package.json
@@ -19,7 +19,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "4.0.0",
     "file-loader": "^1.1.6",
     "font-awesome": "^4.7.0",
     "global": "^4.3.2"
