--- a/web/velocity/package.json
+++ b/web/velocity/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0",
+    "bootswatch": "^4.0.0",
     "file-loader": "^1.1.6",
     "font-awesome": "^4.7.0",
     "global": "^4.3.2"
