--- a/backend/Makefile
+++ b/backend/Makefile
@@ -32,7 +32,7 @@ publish-all:
 	docker push civelocity/builder:${GIT_VERSION}
 	# TODO: CLI publishing
 
-test:
+test: dep-install
 	@docker run --rm -it \
 	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/backend \
 	--workdir /go/src/github.com/velocity-ci/velocity/backend \
