[backend] Making sure dependencies are installed before integration

--- a/backend/test/Makefile
+++ b/backend/test/Makefile
@@ -1,3 +1,4 @@
 test:
+	cd ../ && $(MAKE) dep-install
 	docker-compose -f docker-compose.integration.yaml down
 	docker-compose -f docker-compose.integration.yaml up --abort-on-container-exit
