--- a/backend/test/Makefile
+++ b/backend/test/Makefile
@@ -1,4 +1,4 @@
 test:
-	cd ../ && $(MAKE) dep-install
+	cd ../ && $(MAKE) install
 	docker-compose -f docker-compose.integration.yaml down
 	docker-compose -f docker-compose.integration.yaml up --abort-on-container-exit
