--- a/web/velocity/package.json
+++ b/web/velocity/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "@types/node": "^8.0.28",
     "awesome-typescript-loader": "^3.2.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.7",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.5.4",
@@ -14,6 +17,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "typescript": "^2.5.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
