Cleaned up, using list-groups for ease. Started on docker-compose getting started.

--- a/docs/velocity/config.toml
+++ b/docs/velocity/config.toml
@@ -1,6 +1,7 @@
 baseurl = "https://velocityci.io"
 title = "Velocity CI"
 languageCode = "en-gb"
+pygmentsStyle = "friendly"
 
 [params]
     github_username = "velocity-ci"
