--- a/tasks/publish-builder.yml
+++ b/tasks/publish-builder.yml
@@ -9,7 +9,7 @@ parameters:
 
 docker:
   registries:
-    - use: civelocity/auth-docker-hub
+    - use: https://github.com/velocity-ci/registry.docker-hub/releases/download/0.1.0/docker-hub
       arguments:
         USERNAME: ${docker_hub_username}
         PASSWORD: ${docker_hub_password}
@@ -19,6 +19,10 @@ steps:
     description: Build release image
     dockerfile: build/docker/builder/Dockerfile
     context: ./backend
+    tags:
+      - civelocity/builder:${GIT_DESCRIBE}
+      - civelocity/builder:latest
+  - type: push
     tags:
       - civelocity/builder:${GIT_DESCRIBE}
       - civelocity/builder:latest
