--- a/tasks/publish-builder.yml
+++ b/tasks/publish-builder.yml
@@ -9,10 +9,10 @@ parameters:
 
 docker:
   registries:
-    - use: https://github.com/velocity-ci/registry.docker-hub/releases/download/0.1.0/docker-hub
+    - use: https://github.com/velocity-ci/registry.docker-hub/releases/download/0.1.1/docker-hub
       arguments:
-        USERNAME: ${docker_hub_username}
-        PASSWORD: ${docker_hub_password}
+        username: ${docker_hub_username}
+        password: ${docker_hub_password}
 
 steps: 
   - type: build
