[backend] Using project root in steps. Need to add step interruption

--- a/tasks/examples/compose-example.yaml
+++ b/tasks/examples/compose-example.yaml
@@ -3,4 +3,4 @@ name: compose-example
 
 steps:
   - type: compose
-    composeFile: tasks/example.compose.yml
+    composeFile: examples/docker-compose/example.compose.yml
