--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,26 +2,26 @@ AWS_DEFAULT_REGION ?= eu-west-1
 
 build: 
 	docker run --rm \
-	--volume ${CURDIR}/velocity:/app \
+	--volume ${CURDIR}:/app \
 	--workdir /app \
-	publysher/hugo \
-	hugo
+	vjftw/vuepress \
+	build
 
 deploy:
 	docker run --rm \
-	--volume ${CURDIR}/velocity:/app \
+	--volume ${CURDIR}:/app \
 	--workdir /app \
 	--env AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} \
 	--env AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
 	--env AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} \
 	anigeo/awscli:latest \
-	s3 cp public/. s3://velocityci.io --acl public-read --recursive --cache-control max-age=120
+	s3 cp .vuepress/dist/. s3://velocityci.io --acl public-read --recursive --cache-control max-age=120
 
 serve:
 	docker run --rm \
 	-it \
-	--volume ${CURDIR}/velocity:/app \
+	--volume ${CURDIR}:/app \
 	--workdir /app \
-	-p 1313:1313 \
-	publysher/hugo \
-	hugo server --bind 0.0.0.0
+	-p 8080:8080 \
+	vjftw/vuepress \
+	dev -h 0.0.0.0
