--- a/web/velocity-elm-app/package.json
+++ b/web/velocity-elm-app/package.json
@@ -52,6 +52,8 @@
     "whatwg-fetch": "2.0.4"
   },
   "dependencies": {
-    "git-url-parse": "^11.1.1"
+    "git-url-parse": "^11.1.1",
+    "phoenix": "^1.4.0",
+    "sockette": "^2.0.3"
   }
 }
