--- a/architect/docker-compose.yaml
+++ b/architect/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 
   architect:
     image: elixir:latest
-    command: /bin/sh -c "mix local.hex --force && mix deps.get && mix wait_for_it && mix ecto.create && mix ecto.migrate && mix phx.server"
+    command: /bin/sh -c "mix local.hex --force && mix local.rebar --force && mix deps.get && mix wait_for_it && mix ecto.create && mix ecto.migrate && mix phx.server"
     working_dir: /app
     environment:
       MIX_ENV: dev
@@ -25,5 +25,5 @@ services:
       DB_DBNAME: velocity
     ports:
       - "4000:4000"
-    volumes: 
+    volumes:
       - "./:/app"
