--- a/backend/Gopkg.toml
+++ b/backend/Gopkg.toml
@@ -31,7 +31,7 @@ ignored = ["github.com/velocity-ci/velocity"]
 
 [[constraint]]
   name = "github.com/docker/docker"
-  version = "v1.13.1"
+   version = "v17.03.2-ce"
 
 [[constraint]]
   branch = "master"
