use go modules; update terminology; need to put build->task plans into ETS and add buildID to task update event payload from builders to run logic to know when a build is complete

--- a/.velocityci/blueprints/backend/cli/publish.yml
+++ b/.velocityci/blueprints/backend/cli/publish.yml
@@ -1,4 +1,5 @@
 description: "Builds and publishes CLI"
+cache: 1hr/pathOrDirChange
 
 parameters:
   - use: https://github.com/velocity-ci/parameter.aws-ssm/releases/download/0.1.1/aws-ssm
@@ -7,8 +8,7 @@ parameters:
     exports:
       value: github_release_token
 
-steps: 
-
+steps:
   - type: run
     description: Builds CLI binaries
     image: golang:1.11
