colourful output. Last output task would be having save writes to io.Stdout through a single worker. Could do a fancy thing that can show the status of several streams at once or not use carriage returns

--- a/.velocityci/blueprints/backend/test.yml
+++ b/.velocityci/blueprints/backend/test.yml
@@ -2,15 +2,8 @@ description: "Tests the Backend source"
 
 steps:
   - type: run
-    description: Install dependencies
-    image: vjftw/go-dep:1.11
-    mountPoint: /go/src/github.com/velocity-ci/velocity
-    workingDir: backend
-    command: scripts/install-deps.sh
-
-  - type: run
     description: Run tests
-    image: golang:1.11
-    mountPoint: /go/src/github.com/velocity-ci/velocity
+    image: golang:1.12
+    mountPoint: /app
     workingDir: backend
     command: scripts/test-unit.sh
