fix for release

--- a/.velocityci/blueprints/backend/cli/publish.yml
+++ b/.velocityci/blueprints/backend/cli/publish.yml
@@ -15,7 +15,7 @@ steps:
     workingDir: backend
     mountPoint: /app
     environment:
-      GIT_DESCRIBE: ${GIT_DESCRIBE}
+      GIT_DESCRIBE: ${git.describe}
     command: ./scripts/build-cli.sh
 
   - description: Upload linux_amd64 release binary
@@ -24,7 +24,7 @@ steps:
     workingDir: backend
     environment:
       GITHUB_ACCESS_TOKEN: ${github_release_token}
-    command: velocity-ci velocity ${GIT_DESCRIBE} dist/vcli_linux_amd64
+    command: velocity-ci velocity ${git.describe} dist/vcli_linux_amd64
 
   - description: Upload darwin_amd64 release binary
     type: run
@@ -32,4 +32,4 @@ steps:
     workingDir: backend
     environment:
       GITHUB_ACCESS_TOKEN: ${github_release_token}
-    command: velocity-ci velocity ${GIT_DESCRIBE} dist/vcli_darwin_amd64
+    command: velocity-ci velocity ${git.describe} dist/vcli_darwin_amd64
