fix building and pushing with docker authentication. Might be desriable to remove registry config from yaml and rely on ~/.docker/config.json

--- a/.velocityci/blueprints/backend/builder/publish.yml
+++ b/.velocityci/blueprints/backend/builder/publish.yml
@@ -13,15 +13,15 @@ docker:
         username: ${docker_hub_username}
         password: ${docker_hub_password}
 
-steps: 
+steps:
   - type: build
     description: Build release image
     dockerfile: build/docker/builder/Dockerfile
     context: ./backend
     tags:
-      - civelocity/builder:${GIT_DESCRIBE}
+      - civelocity/builder:${git.describe}
       - civelocity/builder:latest
   - type: push
     tags:
-      - civelocity/builder:${GIT_DESCRIBE}
+      - civelocity/builder:${git.describe}
       - civelocity/builder:latest
